--- a/src/components/statSection/StatisticsSection.css
+++ b/src/components/statSection/StatisticsSection.css
@@ -1,11 +1,11 @@
 
 .statistics-section {
-  padding: 4rem 2rem;
+  padding: 2rem 2rem;
   color: #fff;
   text-align: center;
   background: url('./adpha-3.jpg') no-repeat center center;
   background-size: cover;
-  background-attachment: fixed; /* Fixed background on scroll */
+  background-attachment: fixed; 
   position: relative;
 }
 
@@ -18,14 +18,16 @@
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  color: #002f6c;
+  /* color: #002f6c; */
+  color: #ffffff;
 }
 
 .our-impact-home-dash {
   height: 4px;
   border-radius: 2px;
   background: linear-gradient(90deg, #007bff, #0056b3);
-  margin: auto;
+  /* background: linear-gradient(90deg, #ff4757, #ff6b81); */
+  margin: 0 auto 1.5rem  auto;
   width: 100px;
   transform-origin: left;
 }
@@ -43,6 +45,9 @@
   border-radius: 12px;
   padding: 2rem;
   width: 250px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -61,7 +66,8 @@
   bottom: 0;
   width: 100%;
   height: 8px;
-  background: linear-gradient(90deg, #ff4757, #ff6b81);
+  /* background: linear-gradient(90deg, #ff4757, #ff6b81); */
+  background-color: #ff4041;
   border-radius: 0 0 12px 12px;
 }
 
@@ -81,24 +87,38 @@
 
 .stat-label {
   font-size: 1rem;
-  color: #555;
+  color: #444;
 }
 
-/* Media query for 2 columns on mobile */
+
 @media screen and (max-width: 768px) {
   .statistics-grid {
-    justify-content: center; /* Center the cards */
+    justify-content: center; 
   }
+
 
   .stat-card {
     width: calc(50% - 1.2rem); 
     margin-bottom: 2rem;
+    padding: 1.4rem;
   }
+
+  .statistics-grid {
+    gap: 1rem;
+  }
+
+  .stat-value {
+    font-size: 2rem;
+  }
+ 
 }
 
 /* Media query for smaller mobile screens (optional) */
 @media screen and (max-width: 480px) {
   .stat-card {
     width: calc(100% - 2rem); /* 1 column on very small screens */
+  }
+  .stat-value {
+    font-size: 2rem;
   }
 }
